--- a/MauiMathsApp/MauiMathsApp.csproj
+++ b/MauiMathsApp/MauiMathsApp.csproj
@@ -35,13 +35,20 @@
 
 		<!-- Images -->
 		<MauiImage Include="Resources\Images\*" />
-		<MauiImage Update="Resources\Images\dotnet_bot.svg" BaseSize="168,208" />
 
 		<!-- Custom Fonts -->
 		<MauiFont Include="Resources\Fonts\*" />
 
 		<!-- Raw Assets (also remove the "Resources\Raw" prefix) -->
 		<MauiAsset Include="Resources\Raw\**" LogicalName="%(RecursiveDir)%(Filename)%(Extension)" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <None Remove="Resources\Fonts\CaveatBrush-Regular.ttf" />
+	  <None Remove="Resources\Images\background1.jpg" />
+	  <None Remove="Resources\Images\background2.jpg" />
+	  <None Remove="Resources\Images\background3.jpg" />
+	  <None Remove="Resources\Images\trash.png" />
 	</ItemGroup>
 
 	<ItemGroup>
